Add the SystemUI's dream-starter as a DESK_DOCK app.
The circle is complete: dock mode is back, and it will
launch Dreams by default.

Bug: 7163049
Change-Id: I3c681ac701d65b03f882d92d06389d4528e34747

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -214,6 +214,11 @@
                 <action android:name="android.intent.action.CREATE_SHORTCUT" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DESK_DOCK" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
