update Getting Started class about fragments to remove support lib lesson and mention the action bar library, then update any links and add redirect bug: 10000221
Change-Id: I625c9cc888b213f1b1e31d8a83ae4dab2051395f

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -21,6 +21,9 @@ redirects:
 - from: /sdk/compatibility-library.html
   to: /tools/support-library/index.html
 
+- from: /training/basics/fragments/support-lib.html
+  to: /tools/support-library/setup.html
+
 - from: /sdk/eclipse-adt.html
   to: /tools/sdk/eclipse-adt.html
 
