remove obsolete/orphaned "tab layout" doc, make redirect to training lesson
Change-Id: I743be26de666c3385cca1e180da0cab13c1c6335

--- a/docs/html/_redirects.yaml
+++ b/docs/html/_redirects.yaml
@@ -299,6 +299,9 @@ redirects:
 
 # ------------------- TRAINING -------------------
 
+- from: /guide/topics/ui/layout/tabs.html
+  to: /training/implementing-navigation/lateral.html
+
 - from: /training/cloudsync/aesync.html
   to: /google/gcm/index.html
 
